Fixed excess whitespace issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,10 @@ body {
   background-color: #f1f1f1;
 }
 
+main {
+  padding: 0 10%;
+}
+
 .selection-title {
   text-align: center;
 }
